[#135979971] - Updated status-header_content to prevent overlapping

--- a/src/assets/toolkit/styles/components/_status-header.scss
+++ b/src/assets/toolkit/styles/components/_status-header.scss
@@ -4,20 +4,20 @@
   padding: 1rem;
   overflow: hidden;
   // margin-bottom: 2rem;
-  
+
   @media #{$small-only} {
     margin-left: -($column-gutter/2);
     margin-right: -($column-gutter/2);
     padding-left: $column-gutter/2;
     padding-right: $column-gutter/2;
   }
-  
+
   p {
     @include responsive-text-size('base');
     color: $charcoal;
   }
 
-  // Status colors 
+  // Status colors
   &.status--other {
     .status-header_group {
       border-color: $alert;
@@ -41,14 +41,14 @@
   &.has-button {
     @media #{$medium} {
       .status-header_content {
-        @include grid-column(8);
+        @include grid-column(7);
       }
 
       .status-header_action {
         @include grid-column(4);
         float: right;
       }
-    }  
+    }
   }
 }
 
@@ -63,7 +63,7 @@
   }
 }
 
-.status-header_action { 
+.status-header_action {
  .button {
     margin-top: 1rem;
 
@@ -73,7 +73,7 @@
       margin-top: 0;
     }
   }
-}  
+}
 
 .status-header_group {
   @media #{$medium-up} {
